# koikoi-scorer

./: .travis.yml  CMakeLists.txt  README.md  koikoi-scorer.sln
_image/: README.md
src/: CMakeLists.txt  begining-hands.cpp  begining-hands.h  card-define.h  card-functor.cpp  card-functor.h  koikoi-scorer.cpp  koikoi-scorer.h  koikoi-scorer.vcxproj  koikoi-scorer.vcxproj.filters  month-define.h  monthly-card.cpp  monthly-card.h  point-counter.cpp  point-counter.h  point-pile.cpp  point-pile.h  point-rules.cpp  point-rules.h  rule-define.h  score-report.h  score-table.cpp  score-table.h  scoring-define.h  scoring-hand-calculator.cpp  scoring-hand-calculator.h
test/: CMakeLists.txt  MyOwnNewMacros.h  begininghands_test.cpp  instancewins_test.cpp  koikoi-scorer-tests.vcxproj  koikoi-scorer-tests.vcxproj.filters  koikoiscorer_test.cpp  monthlycard_test.cpp  optionrules_test.cpp  scoringhands_test.cpp
